Rewrite RTTI system