@@ -148,6 +148,7 @@
                         <javaOption>--enable-native-access=org.lwjgl</javaOption>
                         <javaOption>--enable-native-access=org.lwjgl.opengl</javaOption>
                         <javaOption>--enable-native-access=org.lwjgl.jawt</javaOption>
+                        <javaOption>--enable-preview</javaOption>
                     </javaOptions>
                     <module>odradek.app/sh.adelessfox.odradek.app.Application</module>
                 </configuration>
